[package]
name = "yta-rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[dependencies]
log = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1"
thiserror = "1"
regex = "1.8.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde-aux = "4.2.0"
chrono = { version = "0.4.26", features = ["serde"] }
