[package]
name = "yta-rs"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
name = "yta-rs"
path = "src/main.rs"

[dependencies]
log = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", default-features = false, features = [
    "json",
    "rustls-tls",
    "stream",
] }
async-trait = "0.1"
thiserror = "1"
regex = "1.8.3"
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
serde-aux = "4.2.0"
chrono = { version = "0.4.26", features = ["serde"] }
quick-xml = "0.29.0"
reqwest_cookie_store = "0.6.0"
reqwest-retry = "0.2.2"
reqwest-middleware = "0.2.2"
futures = "0.3.28"
tokio-stream = "0.1.14"

[profile.release]
lto = true
strip = true
opt-level = 3
